# yawa

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  conf.py  yawa.rst
res/: PKGBUILD
scripts/: travis_run.sh
src/: CMakeLists.txt  config.h.in  hsetroot.c  utils.c  utils.h  yawa.c  yawa.h
